fix for TFS# 21741 - fix issue with Owners and Requester not showing on the applied filters section.

--- a/SQ/Static/CSS/custom-ui.css
+++ b/SQ/Static/CSS/custom-ui.css
@@ -2638,7 +2638,7 @@ ul {
           .sq-top-ribbon > ul > li > ul > li#sq-filters-item > div #sq-filters #more-filters {
             position: relative; }
             .sq-top-ribbon > ul > li > ul > li#sq-filters-item > div #sq-filters #more-filters .arrow {
-              left: 106px;
+              left: 114px;
               top: 6px; }
           .sq-top-ribbon > ul > li > ul > li#sq-filters-item > div > div {
             padding: 0; }
@@ -2731,6 +2731,10 @@ ul {
       .sq-top-ribbon > ul > li#filters-section > ul > li > a > select, .sq-top-ribbon > ul > li#filters-section > ul > li > div > div > a > select {
         border: none;
         width: 123px; }
+
+.sq-top-ribbon > ul > li#filters-section > ul > li:last-child {
+  min-width: 135px;
+}
     .sq-top-ribbon > ul > li#excel li {
       padding: 15px 0 0 0; }
     .sq-top-ribbon > ul > li#excel #excel-icon-text {
@@ -3042,9 +3046,9 @@ input#searchById {
 
 .summary > div {
   /*#planned-date {
-		margin-left: 13px;
-		margin-right: 77px;
-	}*/
+    margin-left: 13px;
+    margin-right: 77px;
+  }*/
 }
 
 .summary > div.row {
@@ -3289,34 +3293,34 @@ input#searchById {
   border-bottom: 1px solid #aaa;
   border-left: none;
   /*.task-col {
-		width: 250px;
-	}
-	.owner-col {
-		width: 130px;
-	}
-	.department-col {
-		width: 100px;
-	}*/
+    width: 250px;
+  }
+  .owner-col {
+    width: 130px;
+  }
+  .department-col {
+    width: 100px;
+  }*/
   /*.status-col {
-		line-height: 22px;
-		i {
-			background: url("/sq/static/images/single-queue-sprite.png") no-repeat 0 0;
-			display: inline-block;
-			width: 18px;
-			height: 20px;
-			float: left;
-			margin-right: 5px;
-			&.started-icon {
-				background-position: -722px -37px;
-			}
-			&.done-icon {
-				background-position: -412px -38px;
-			}
-			&.backlog-icon {
-				background-position: -254px -34px;
-			}
-		}
-	}*/
+    line-height: 22px;
+    i {
+      background: url("/sq/static/images/single-queue-sprite.png") no-repeat 0 0;
+      display: inline-block;
+      width: 18px;
+      height: 20px;
+      float: left;
+      margin-right: 5px;
+      &.started-icon {
+        background-position: -722px -37px;
+      }
+      &.done-icon {
+        background-position: -412px -38px;
+      }
+      &.backlog-icon {
+        background-position: -254px -34px;
+      }
+    }
+  }*/
 }
 
 #results-data-list #edit-task-listing tr td .icon-small-edit {
@@ -3432,7 +3436,6 @@ input#searchById {
 .form-control.date-picker {
   box-sizing: border-box;
   width: 100px; }
-
 .form-control.k-multiselect {
   min-height: 34px;
   height: auto;
