--- a/SQ/Static/CSS/partials/_ribbon.scss
+++ b/SQ/Static/CSS/partials/_ribbon.scss
@@ -274,7 +274,7 @@
               #more-filters {
                 position: relative;
                 .arrow {
-                  left: 106px;
+                  left: 114px;
                   top: 6px;
                 }
               }
@@ -416,6 +416,9 @@
         > a > select, > div > div > a > select {
           border: none;
           width: 123px;
+        }
+        &:last-child {
+          min-width: 135px;
         }
       }
     }
